Revert "Absolute header on mobile to fix fixed position bug"
This reverts commit 7e1364d4b99b3ba1ec029a3e530d409b8be8f7de.

--- a/htdocs/assets/scss/core/_modules.scss
+++ b/htdocs/assets/scss/core/_modules.scss
@@ -292,7 +292,6 @@ img.media__img {
 	background-color: $color-brand-dark;
 	@include respond-max($bp1) {
 		margin-bottom: 1.5em;
-		position: absolute;
 	}
 }
 
